--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 
   <title>shareven-blog</title>
-  
+  <link rel="icon" href="/static/img/myico.ico">
 </head>
 
 <body>
