完成了技术经验模块

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv=”content-type” content=”text/html; charset=UTF-8″ />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-
-  <title>shareven-blog</title>
+  <meta name="description" content="shareven-site - 简洁、直观、强悍de开发和设计，大家一起来总结开发经验，让web开发更迅速、简单。">
+  <meta name="keywords" content="HTML, CSS, JS, JavaScript, framework, bootstrap, vue, vue-cli, php, mysql, web development">
+  <meta name="author" content="shareven">
+  <title>一起去创造，发现新技术</title>
   <link rel="icon" href="/static/img/myico.ico">
 </head>
 
